--- a/contact.html
+++ b/contact.html
@@ -21,20 +21,19 @@
     </header>
 
     <main>
-        <section id="contact-hero" class="content-section">
-            <div id="contact-map-overlay"></div> <div class="container contact-content-wrapper">
+        <div id="contact-hero" class="content-section-contact">
+            <div id="contact-map-overlay"><div class="container contact-content-wrapper">
                 <div class="contact-left">
                     <h2 id="contact-title">Contact us</h2>
                     <p id="contact-subtitle" class="contact-subtitle-text"></p>
                     
                     <div class="contact-details-group">
                         <div class="contact-detail">
-                            <h3 id="contact-our-contacts-title">OUR CONTACTS</h3>
+                            <h3 id="contact-our-contacts-title">My Contacts</h3>
                             <p id="contact-email-display">yazidilham2015@gmail.com</p>
                             <p id="contact-phone-display">+62 822 8302 2745</p>
                         </div>
                     </div>
-
                     <div id="contact-social-media" class="social-icons-contact"></div>
                 </div>
 
@@ -52,12 +51,31 @@
                     </div>
                 </div>
             </div>
+        </div>
+        </div>
         </section>
     </main>
 
     <footer>
-        <div class="container">
-            <p>&copy; 2025. All rights reserved.</p>
+        <div class="container footer-redesign">
+            <div class="footer-brand">
+                <h3>Hilman Yazid Ilhamsyah's</h3>
+                <h3>Personal Portfolio</h3>
+                <p>&copy; 2025. All rights reserved.</p>
+            </div>
+            <div class="footer-links">
+                <div class="footer-column">
+                    <h4>Account</h4>
+                    <ul>
+                        <li><a href="https://www.instagram.com/your_instagram_handle" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+                        <li><a href="https://github.com/HillMan-20" target="_blank" rel="noopener noreferrer">Github</a></li>
+                        <li><a href="https://www.linkedin.com/in/hilman-yazid-ilhamsyah-17b951305/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h4>Contacts</h4>
+                    <p>+62 (822) 8302 2745</p> <p><a href="mailto:emailanda@contoh.com" style="text-decoration: none; color: inherit;">yazidilham2015@gmail.com</a></p> <p>Tanjung Pinang, Indonesia</p> </div>
+            </div>
         </div>
     </footer>
 
