--- a/article.html
+++ b/article.html
@@ -29,7 +29,28 @@
         </section>
     </main>
 
-    <footer><div class="container"><p>&copy; 2025. All rights reserved.</p></div></footer>
+    <footer>
+        <div class="container footer-redesign">
+            <div class="footer-brand">
+                <h3>Hilman Yazid Ilhamsyah's</h3>
+                <h3>Personal Portfolio</h3>
+                <p>&copy; 2025. All rights reserved.</p>
+            </div>
+            <div class="footer-links">
+                <div class="footer-column">
+                    <h4>Account</h4>
+                    <ul>
+                        <li><a href="https://www.instagram.com/your_instagram_handle" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+                        <li><a href="https://github.com/HillMan-20" target="_blank" rel="noopener noreferrer">Github</a></li>
+                        <li><a href="https://www.linkedin.com/in/hilman-yazid-ilhamsyah-17b951305/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h4>Contacts</h4>
+                    <p>+62 (822) 8302 2745</p> <p><a href="mailto:emailanda@contoh.com" style="text-decoration: none; color: inherit;">yazidilham2015@gmail.com</a></p> <p>Tanjung Pinang, Indonesia</p> </div>
+                </div>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
