--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <div id="profile-name-skeleton" class="skeleton skeleton-text"></div>
                     <p id="profile-short-bio" class="subtitle real-content" style="visibility: hidden;"></p>
                     <div id="profile-short-bio-skeleton" class="skeleton skeleton-text"></div>
+                    <div id="contact-social-media" class="social-icons"></div>
                 </div>
             </div>
         </section>
@@ -142,7 +143,26 @@
     </main>
 
     <footer>
-        <div class="container"><p>&copy; 2025. All rights reserved.</p></div>
+        <div class="container footer-redesign">
+            <div class="footer-brand">
+                <h3>Hilman Yazid Ilhamsyah's</h3>
+                <h3>Personal Portfolio</h3>
+                <p>&copy; 2025. All rights reserved.</p>
+            </div>
+            <div class="footer-links">
+                <div class="footer-column">
+                    <h4>Account</h4>
+                    <ul>
+                        <li><a href="https://www.instagram.com/your_instagram_handle" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+                        <li><a href="https://github.com/HillMan-20" target="_blank" rel="noopener noreferrer">Github</a></li>
+                        <li><a href="https://www.linkedin.com/in/hilman-yazid-ilhamsyah-17b951305/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h4>Contacts</h4>
+                    <p>+62 (822) 8302 2745</p> <p><a href="mailto:emailanda@contoh.com" style="text-decoration: none; color: inherit;">yazidilham2015@gmail.com</a></p> <p>Tanjung Pinang, Indonesia</p> </div>
+                </div>
+        </div>
     </footer>
 
     <div id="lightbox" class="hidden">
